--- a/Python/Python Algorithm/이차원 리스트.md
+++ b/Python/Python Algorithm/이차원 리스트.md
@@ -58,4 +58,38 @@ print(matrix[2][0])
      
      ```
   
-     
+
+## 순회
+
+1. 이중 for문을 이용한 행 우선 순회
+
+   ```python
+   for i in range(n): # 행
+       for j in range(m): # 열
+           print(matrix[i][j])
+   ```
+
+2.  이중 for문을 이용한 열 우선 순회
+
+   ```python
+   for i in range(m): # 열
+       for j in range(n): #행
+           print(matrix[j][i])
+   ```
+
+3. Pythonic한 방법
+
+   ```python
+   total = sum(map(sum, matrix))
+   ```
+
+4. Pythonic한 방법으로 최대값 최소값 구하기
+
+   ```python
+   # 복잡도는 같다는 것을 숙지하고 있어야 함 !
+   
+   max_value = max(map(max, matrix))
+   min_value = min(map(min, matrix))
+   ```
+
+   
