--- a/Python/Python Algorithm/이차원 리스트.md
+++ b/Python/Python Algorithm/이차원 리스트.md
@@ -59,9 +59,9 @@ print(matrix[2][0])
      ```
   
 
-## 순회
+## 📝 순회
 
-1. 이중 for문을 이용한 행 우선 순회
+1. 이중 for문을 이용한 행 우선 순회 ✔
 
    ```python
    for i in range(n): # 행
@@ -69,7 +69,7 @@ print(matrix[2][0])
            print(matrix[i][j])
    ```
 
-2.  이중 for문을 이용한 열 우선 순회
+2.  이중 for문을 이용한 열 우선 순회 ✔
 
    ```python
    for i in range(m): # 열
@@ -77,13 +77,13 @@ print(matrix[2][0])
            print(matrix[j][i])
    ```
 
-3. Pythonic한 방법
+3. Pythonic한 방법 ✔
 
    ```python
    total = sum(map(sum, matrix))
    ```
 
-4. Pythonic한 방법으로 최대값 최소값 구하기
+4. Pythonic한 방법으로 최대값 최소값 구하기 ✔ 
 
    ```python
    # 복잡도는 같다는 것을 숙지하고 있어야 함 !
@@ -92,4 +92,35 @@ print(matrix[2][0])
    min_value = min(map(min, matrix))
    ```
 
-   
+
+##  📝 회전
+
+ 1. 90도 회전하기 ✔
+
+    ```python
+    matrix = [
+        [1, 2, 3]
+        [4, 5, 6]
+        [7, 8, 9]
+    ]
+    
+    n = 3 
+    rotated_matrix = [[0] * n for _ in range(n)]
+    	
+        # 왼쪽 								
+    for i in range(n):
+        for j in range(n):
+            rotated_matrix[i][j] = ⭐ matrix[j][n-i-1]
+        							# 길이 - 인덱스 - 인덱스를 맞춰주는 수
+        # 오른쪽 
+    for i in range(n):
+        for j in range(n):
+            rotated_matrix[i][j] = ⭐ matrix[n-j-i][i]
+            
+    # 과정을 기억하자 직접 생각해보자 
+    ```
+
+    
+
+    
+
